---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
snapshot_kind: text
---
ASYNC102_trio.py:14:9: ASYNC102 shield it!
   |
12 |         ...
13 |     except trio.Cancelled:
14 |         await foo()  # error: 8, Statement("trio.Cancelled", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
15 |     except:
16 |         await foo()  # safe, since after trio.Cancelled
   |

ASYNC102_trio.py:21:9: ASYNC102 shield it!
   |
19 |         ...
20 |     except trio.Cancelled:
21 |         await foo()  # error: 8, Statement("trio.Cancelled", lineno-1)
   |         ^^^^^^^^^^^ ASYNC102
22 |     except BaseException:
23 |         await foo()  # safe, since after trio.Cancelled
   |
